--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -37,18 +37,10 @@
 06_Thumbs.db_SearchText=
 06_Thumbs.db_SearchFlags=0|002002000020|||||||||0000|||
 06_Thumbs.db_plugin=tc.fullname contains Thumbs.db 
-.+_1.jpg_SearchFor=.+_1.jpg
-.+_1.jpg_SearchIn=
-.+_1.jpg_SearchText=
-.+_1.jpg_SearchFlags=0|002002001020|||||||||0000|||
-.+_01.jpg_SearchFor=.+_01.jpg
-.+_01.jpg_SearchIn=
-.+_01.jpg_SearchText=
-.+_01.jpg_SearchFlags=0|002002001020|||||||||0000|||
-^p.*page1\.jpg$_SearchFor=^p.*page1\.jpg$
-^p.*page1\.jpg$_SearchIn=
-^p.*page1\.jpg$_SearchText=
-^p.*page1\.jpg$_SearchFlags=0|002002001020|||||||||0000|||
+^p.+1\.jpg_SearchFor=^p.+1\.jpg
+^p.+1\.jpg_SearchIn=
+^p.+1\.jpg_SearchText=
+^p.+1\.jpg_SearchFlags=0|002002001020|||||||||0000|||
 
 
 [SearchName]
@@ -74,23 +66,23 @@
 19=power
 
 [SearchIn]
-0=d:\09_hardRain\01_2017
-1=d:\09_hardRain
-2=C:\Program Files\totalcmd
-3=d:\11_exaData\06_util
-4=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
-5=d:\09_hardRain\08_ihanseol - 2023
-6=d:\11_exaData\06_util\010_ZZATURI
-7=z:\11_exaData
-8=F:\11_exaData\06_util
-9=f:\
-10=f:\11_exaData\06_util
-11=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-12=z:\11_exaData\06_util
-13=d:\13_전주도장컴 자료
-14=d:\13_전주도장컴 자료\drive d\Temp
-15=d:\13_전주도장컴 자료\drive d
-16=d:\12_dev
-17=z:\11_exaData\04_dev
-18=y:\A1_exaVideo
-19=d:\02_Book
+0=d:\05_Send
+1=d:\09_hardRain\01_2017
+2=d:\09_hardRain
+3=C:\Program Files\totalcmd
+4=d:\11_exaData\06_util
+5=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
+6=d:\09_hardRain\08_ihanseol - 2023
+7=d:\11_exaData\06_util\010_ZZATURI
+8=z:\11_exaData
+9=F:\11_exaData\06_util
+10=f:\
+11=f:\11_exaData\06_util
+12=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+13=z:\11_exaData\06_util
+14=d:\13_전주도장컴 자료
+15=d:\13_전주도장컴 자료\drive d\Temp
+16=d:\13_전주도장컴 자료\drive d
+17=d:\12_dev
+18=z:\11_exaData\04_dev
+19=y:\A1_exaVideo
