--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -170,18 +170,19 @@ button=C:\Program Files\totalcmd\ini\icons dll\minhwasoo.icl,87
 menu=Change File Name with SartNumber
 
 [em_Pdf2Image]
-cmd=cmd /k "c:\Program Files\totalcmd\ini\02_python\p2image.cmd"
+cmd="c:\Program Files\totalcmd\ini\02_python\p2image.cmd"
 button=%commander_path%\ini\icons dll\minhwasoo.icl,87
 menu=Convert PDF to Image 
 
 [em_RunAQT]
-;= cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt.py"
-;= cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt_minor.py"
-;= cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt_dontclosefile.py"
-
 cmd="c:\Program Files\totalcmd\ini\02_python\p2run_aqt.cmd"
 button=%commander_path%\ini\icons dll\minhwasoo.icl,87
-menu= Generate pdf file from .aqt
+menu= dual, graph and report , aqt --> pdf
+
+[em_RunAQTSingle]
+cmd="c:\Program Files\totalcmd\ini\02_python\p2run_aqt.cmd single"
+button=%commander_path%\ini\icons dll\minhwasoo.icl,87
+menu= single graph generation, aqt --> pdf
 
 ; ****************************************************************************************************
 
