--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -98,86 +98,88 @@ menu52=04_Reference Data
 cmd52=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
 menu53=11_JungCheon Photo by Season
 cmd53=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu54=07_LandSlide
-cmd54=cd d:\12_dev\02_Excel\07_LandSlide
-menu55=05_ihanseol - 2020
-cmd55=cd d:\09_hardRain\05_ihanseol - 2020
-menu56=06_ihanseol - 2021
-cmd56=cd d:\09_hardRain\06_ihanseol - 2021
-menu57=07_ihanseol - 2022
-cmd57=cd d:\09_hardRain\07_ihanseol - 2022
-menu58=08_ihanseol - 2023
-cmd58=cd d:\09_hardRain\08_ihanseol - 2023
-menu59=--
-menu60=-WSL2
-menu61=WSL LocalState EXT4
-cmd61=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
-menu62=WSL minhwasoo
-cmd62=cd a:\home\minhwasoo
-menu63=--
-menu64=-Git Bash
-menu65=Git
-cmd65=cd C:\Program Files\Git
-menu66=gitbash /usr/bin
-cmd66=cd C:\Program Files\Git\usr\bin
-menu67=gitbash - mingw64 - bin
-cmd67=cd C:\Program Files\Git\mingw64\bin
-menu68=gitbvash - mingw64 - git-core
-cmd68=cd C:\Program Files\Git\mingw64\libexec\git-core
-menu69=gitbash - mergetools
-cmd69=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
-menu70=--
-menu71=-Appdata and Local
-menu72=d:/12_dev/  Action and Configuration
-cmd72=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
-menu73=Sublime Installed Packages
-cmd73=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu74=Sublime Packages
-cmd74=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu75=Sublime Packages User
-cmd75=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu76=AppData --> Local
-cmd76=cd C:\Users\minhwasoo\AppData\Local
-menu77=AddData --> Roaming
-cmd77=cd C:\Users\minhwasoo\AppData\Roaming
-menu78=Appdata --> FlowLauncher CustomIcons
-cmd78=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu79=Appdata --> Bing WPImages
-cmd79=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu80=Appdata --> WindowsTerminal Setting
-cmd80=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu81=ProgramData
-cmd81=cd C:\ProgramData
-menu82=programdata ---> 01_Inspection Tool
-cmd82=cd C:\ProgramData\36_Automation\01_Inspection Tool
-menu83=--
-menu84=-12_dev --> excel
-menu85=02_Excel2 --> 01_Acquifer Pumping Test
-cmd85=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
-menu86=--
-menu87=02_ROMS
-cmd87=cd d:\11_exaData\10_Game\02_ROMS
-menu88=00_Emule
-cmd88=cd C:\ProgramData\00_Emule
-menu89=03_download
-cmd89=cd d:\03_download
-menu90=03_my_script
-cmd90=cd d:\12_dev\03_visual_lisp\03_my_script
-menu91=02_Book
-cmd91=cd d:\02_Book
-menu92=08_나의작업
-cmd92=cd d:\08_나의작업\
-menu93=04_mp3
-cmd93=cd d:\04_mp3
-menu94=05_Send
-cmd94=cd d:\05_Send
-menu95=06_Send2
-cmd95=cd d:\06_Send2
-menu96=C:_Temp
-cmd96=cd c:\Temp
-menu97=e: download
-cmd97=cd e:\download
-menu98=Bing
-cmd98=cd d:\10_photo\Desktop Pictures\bing
-menu99=NAS4DUAL 06_util
-cmd99=cd z:\11_exaData\06_util
+menu54=05_ihanseol - 2020
+cmd54=cd d:\09_hardRain\05_ihanseol - 2020
+menu55=06_ihanseol - 2021
+cmd55=cd d:\09_hardRain\06_ihanseol - 2021
+menu56=07_ihanseol - 2022
+cmd56=cd d:\09_hardRain\07_ihanseol - 2022
+menu57=08_ihanseol - 2023
+cmd57=cd d:\09_hardRain\08_ihanseol - 2023
+menu58=--
+menu59=-WSL2
+menu60=WSL LocalState EXT4
+cmd60=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu61=WSL minhwasoo
+cmd61=cd a:\home\minhwasoo
+menu62=--
+menu63=-Git Bash
+menu64=Git
+cmd64=cd C:\Program Files\Git
+menu65=gitbash /usr/bin
+cmd65=cd C:\Program Files\Git\usr\bin
+menu66=gitbash - mingw64 - bin
+cmd66=cd C:\Program Files\Git\mingw64\bin
+menu67=gitbvash - mingw64 - git-core
+cmd67=cd C:\Program Files\Git\mingw64\libexec\git-core
+menu68=gitbash - mergetools
+cmd68=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
+menu69=--
+menu70=-Appdata and Local
+menu71=d:/12_dev/  Action and Configuration
+cmd71=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu72=Sublime Installed Packages
+cmd72=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu73=Sublime Packages
+cmd73=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu74=Sublime Packages User
+cmd74=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu75=AppData --> Local
+cmd75=cd C:\Users\minhwasoo\AppData\Local
+menu76=AddData --> Roaming
+cmd76=cd C:\Users\minhwasoo\AppData\Roaming
+menu77=Appdata --> FlowLauncher CustomIcons
+cmd77=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu78=Appdata --> Bing WPImages
+cmd78=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu79=Appdata --> WindowsTerminal Setting
+cmd79=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu80=ProgramData
+cmd80=cd C:\ProgramData
+menu81=programdata ---> 01_Inspection Tool
+cmd81=cd C:\ProgramData\36_Automation\01_Inspection Tool
+menu82=--
+menu83=-12_dev --> excel
+menu84=02_Excel
+cmd84=cd d:\12_dev\02_Excel
+menu85=02_Excel   --> 07_LandSlide
+cmd85=cd d:\12_dev\02_Excel\07_LandSlide
+menu86=02_Excel2 --> 01_Acquifer Pumping Test
+cmd86=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
+menu87=--
+menu88=02_ROMS
+cmd88=cd d:\11_exaData\10_Game\02_ROMS
+menu89=00_Emule
+cmd89=cd C:\ProgramData\00_Emule
+menu90=03_download
+cmd90=cd d:\03_download
+menu91=03_my_script
+cmd91=cd d:\12_dev\03_visual_lisp\03_my_script
+menu92=02_Book
+cmd92=cd d:\02_Book
+menu93=08_나의작업
+cmd93=cd d:\08_나의작업\
+menu94=04_mp3
+cmd94=cd d:\04_mp3
+menu95=05_Send
+cmd95=cd d:\05_Send
+menu96=06_Send2
+cmd96=cd d:\06_Send2
+menu97=C:_Temp
+cmd97=cd c:\Temp
+menu98=e: download
+cmd98=cd e:\download
+menu99=Bing
+cmd99=cd d:\10_photo\Desktop Pictures\bing
+menu100=NAS4DUAL 06_util
+cmd100=cd z:\11_exaData\06_util
