--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -44,36 +44,36 @@
 
 
 [SearchName]
-0=*.aqt
-1=aqtw*.exe
-2=aqu*.exe
-3=aqutesolv
-4=emf
-5=사진대지
-6=*.tab
-7=pdf
-8=require*
-9=far
-10=typora
-11=RegistryWorkShop
-12=regis
-13=ddu
-14=DS_Store
-15=._
-16=html
-17=exe
-18=.netrc
-19=power
+0=tera
+1=terra
+2=*.aqt
+3=aqtw*.exe
+4=aqu*.exe
+5=aqutesolv
+6=emf
+7=사진대지
+8=*.tab
+9=pdf
+10=require*
+11=far
+12=typora
+13=RegistryWorkShop
+14=regis
+15=ddu
+16=DS_Store
+17=._
+18=html
+19=exe
 
 [SearchIn]
-0=d:\05_Send
-1=d:\09_hardRain\01_2017
-2=d:\09_hardRain
-3=C:\Program Files\totalcmd
-4=d:\11_exaData\06_util
-5=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
-6=d:\09_hardRain\08_ihanseol - 2023
-7=d:\11_exaData\06_util\010_ZZATURI
+0=d:\11_exaData\06_util
+1=d:\11_exaData\06_util\010_ZZATURI
+2=d:\05_Send
+3=d:\09_hardRain\01_2017
+4=d:\09_hardRain
+5=C:\Program Files\totalcmd
+6=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
+7=d:\09_hardRain\08_ihanseol - 2023
 8=z:\11_exaData
 9=F:\11_exaData\06_util
 10=f:\
