--- a/GHISLER/CONFIG/Selection.ini
+++ b/GHISLER/CONFIG/Selection.ini
@@ -1,21 +1,22 @@
 [Selection]
-0=*.pdf
-1=*.jpg
-2=*.*
-3=*.xml
-4=*.zip
-5=*.flac
-6=*.wav
-7=*.mp3
-8=*,xml
-9=*.smi
-10=*.ttf
-11=*.txt
-12=*.otf
-13=*.png
-14=*.bar
-15=*.ico
-16=*.icl
-17=|*\
-18=|*
-19=*.mun
+0=*Copy.aqt
+1=*.*
+2=*.pdf
+3=*.jpg
+4=*.xml
+5=*.zip
+6=*.flac
+7=*.wav
+8=*.mp3
+9=*,xml
+10=*.smi
+11=*.ttf
+12=*.txt
+13=*.otf
+14=*.png
+15=*.bar
+16=*.ico
+17=*.icl
+18=|*\
+19=|*
+20=*.mun
