--- a/GHISLER/CONFIG/Rename.ini
+++ b/GHISLER/CONFIG/Rename.ini
@@ -22,26 +22,26 @@ Number Non Zero_params=0|1|1|1
 
 
 [RenameTemplates]
-0=[N]
-1=w-[N]
-2=00_[N]
-3=0[C]_[N]
-4=a1-[N]
-5=b_[N]
-6=a_[N]
-7=P[C]_[N]
-8=Suzumiya Haruhi no Yuuutsu - [C:5]
-9=Ref - [N]
-10=[N][P1-6][hms]
-11=신비한 바다의 나디아, 오마케 - [C:5]
-12=신비한 바다의 나디아, 스페셜 - [C:5]
-13=신비한 바다의 나디아 - [C:5]
-14=미래소년 코난 - [C:5]
-15=사이버 포뮬러 TV 5기 - [C:5]
-16=사이버 포뮬러 TV 4기 - [C:5]
-17=사이버 포뮬러 TV 3기 - [C:5]
-18=사이버 포뮬러 TV 2기 - [C:5]
-19=사이버 포뮬러 TV 1기 - [C:5]
+0=수질검사_[N]
+1=[N]
+2=w-[N]
+3=00_[N]
+4=0[C]_[N]
+5=a1-[N]
+6=b_[N]
+7=a_[N]
+8=P[C]_[N]
+9=Suzumiya Haruhi no Yuuutsu - [C:5]
+10=Ref - [N]
+11=[N][P1-6][hms]
+12=신비한 바다의 나디아, 오마케 - [C:5]
+13=신비한 바다의 나디아, 스페셜 - [C:5]
+14=신비한 바다의 나디아 - [C:5]
+15=미래소년 코난 - [C:5]
+16=사이버 포뮬러 TV 5기 - [C:5]
+17=사이버 포뮬러 TV 4기 - [C:5]
+18=사이버 포뮬러 TV 3기 - [C:5]
+19=사이버 포뮬러 TV 2기 - [C:5]
 
 
 [RenameSearchFind]
