--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -44,45 +44,45 @@
 
 
 [SearchName]
-0=tera
-1=terra
-2=*.aqt
-3=aqtw*.exe
-4=aqu*.exe
-5=aqutesolv
-6=emf
-7=사진대지
-8=*.tab
-9=pdf
-10=require*
-11=far
-12=typora
-13=RegistryWorkShop
-14=regis
-15=ddu
-16=DS_Store
-17=._
-18=html
-19=exe
+0=inc
+1=bpl
+2=tera
+3=terra
+4=*.aqt
+5=aqtw*.exe
+6=aqu*.exe
+7=aqutesolv
+8=emf
+9=사진대지
+10=*.tab
+11=pdf
+12=require*
+13=far
+14=typora
+15=RegistryWorkShop
+16=regis
+17=ddu
+18=DS_Store
+19=._
 
 [SearchIn]
-0=d:\11_exaData\06_util
-1=d:\11_exaData\06_util\010_ZZATURI
-2=d:\05_Send
-3=d:\09_hardRain\01_2017
-4=d:\09_hardRain
-5=C:\Program Files\totalcmd
-6=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
-7=d:\09_hardRain\08_ihanseol - 2023
-8=z:\11_exaData
-9=F:\11_exaData\06_util
-10=f:\
-11=f:\11_exaData\06_util
-12=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-13=z:\11_exaData\06_util
-14=d:\13_전주도장컴 자료
-15=d:\13_전주도장컴 자료\drive d\Temp
-16=d:\13_전주도장컴 자료\drive d
-17=d:\12_dev
-18=z:\11_exaData\04_dev
-19=y:\A1_exaVideo
+0=c:\Users\minhwasoo\Documents\SynEdit
+1=c:\Users\minhwasoo\Documents\P4D
+2=d:\11_exaData\06_util
+3=d:\11_exaData\06_util\010_ZZATURI
+4=d:\05_Send
+5=d:\09_hardRain\01_2017
+6=d:\09_hardRain
+7=C:\Program Files\totalcmd
+8=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
+9=d:\09_hardRain\08_ihanseol - 2023
+10=z:\11_exaData
+11=F:\11_exaData\06_util
+12=f:\
+13=f:\11_exaData\06_util
+14=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+15=z:\11_exaData\06_util
+16=d:\13_전주도장컴 자료
+17=d:\13_전주도장컴 자료\drive d\Temp
+18=d:\13_전주도장컴 자료\drive d
+19=d:\12_dev
