--- a/GHISLER/CONFIG/Rename.ini
+++ b/GHISLER/CONFIG/Rename.ini
@@ -23,68 +23,68 @@ Number Non Zero_params=0|1|1|1
 
 [RenameTemplates]
 0=[N]
-1=수질검사_[N]
-2=w-[N]
-3=00_[N]
-4=0[C]_[N]
-5=a1-[N]
-6=b_[N]
-7=a_[N]
-8=P[C]_[N]
-9=Suzumiya Haruhi no Yuuutsu - [C:5]
-10=Ref - [N]
-11=[N][P1-6][hms]
-12=신비한 바다의 나디아, 오마케 - [C:5]
-13=신비한 바다의 나디아, 스페셜 - [C:5]
-14=신비한 바다의 나디아 - [C:5]
-15=미래소년 코난 - [C:5]
-16=사이버 포뮬러 TV 5기 - [C:5]
-17=사이버 포뮬러 TV 4기 - [C:5]
-18=사이버 포뮬러 TV 3기 - [C:5]
-19=사이버 포뮬러 TV 2기 - [C:5]
+1=00_[N]
+2=0[C]_[N]
+3=0[N]
+4=_[N]
+5=수질검사_[N]
+6=w-[N]
+7=a1-[N]
+8=b_[N]
+9=a_[N]
+10=P[C]_[N]
+11=Suzumiya Haruhi no Yuuutsu - [C:5]
+12=Ref - [N]
+13=[N][P1-6][hms]
+14=신비한 바다의 나디아, 오마케 - [C:5]
+15=신비한 바다의 나디아, 스페셜 - [C:5]
+16=신비한 바다의 나디아 - [C:5]
+17=미래소년 코난 - [C:5]
+18=사이버 포뮬러 TV 5기 - [C:5]
+19=사이버 포뮬러 TV 4기 - [C:5]
 
 
 [RenameSearchFind]
-0=\((.*?)\)
-1=\[(.*?)\]
-2=\[(\w+)\]
-3=^....
-4=w1
-5=w2
-6=^...
-7=_01
-8=p
-9=slidelegend.com_
-10="[Fix-Fontsizecolor] "
-11="[VCB-Studio] "
-12=(\d+)
-13="[Shiniori-Raws] "
-14=^.{7}
-15=mun
-16=bat
-17=" (2)"
-18=占쏙옙
-19=[VON]
+0=w2
+1=w1
+2=오포리 409-1
+3=^.
+4=\((.*?)\)
+5=\[(.*?)\]
+6=\[(\w+)\]
+7=^....
+8=^...
+9=_01
+10=p
+11=slidelegend.com_
+12="[Fix-Fontsizecolor] "
+13="[VCB-Studio] "
+14=(\d+)
+15="[Shiniori-Raws] "
+16=^.{7}
+17=mun
+18=bat
+19=" (2)"
 
 
 [RenameSearchReplace]
-0=<Clear>
-1=w8
-2=w7
-3=w6
-4=w5
-5=w4
-6=w3
-7=w2
-8=p1-
-9=icl
-10=cmd
-11=a
-12=W
-13=w-1
-14=W2
-15=W5
-16=W4
-17=W3
-18=ow
-19=0
+0=w3
+1=w2
+2=<Clear>
+3=야현리 210
+4=장곡리 1132
+5=장곡리 1143
+6=장곡리 1149
+7=학성리 646-4
+8=장은리 431-6
+9=궁포리 542-2
+10=낙동리 255-1
+11=낙동리 1468-3
+12=궁포리 82-3
+13=장은리 731-1
+14=장은리 749-1
+15=w8
+16=w7
+17=w6
+18=w5
+19=w4
