--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -43,46 +43,53 @@
 ^p.+1\.jpg_SearchFlags=0|002002001020|||||||||0000|||
 
 
+07_Hidden or XML File_SearchFor=
+07_Hidden or XML File_SearchIn=
+07_Hidden or XML File_SearchText=
+07_Hidden or XML File_SearchFlags=0|002002000020|||||||||0000|||
+07_Hidden or XML File_plugin=tc.hidden = 1 | tc.ext contains XML
+
+
 [SearchName]
-0=inc
-1=bpl
-2=tera
-3=terra
-4=*.aqt
-5=aqtw*.exe
-6=aqu*.exe
-7=aqutesolv
-8=emf
-9=사진대지
-10=*.tab
-11=pdf
-12=require*
-13=far
-14=typora
-15=RegistryWorkShop
-16=regis
-17=ddu
-18=DS_Store
-19=._
+0=ezpdf
+1=bak
+2=1143
+3=inc
+4=bpl
+5=tera
+6=terra
+7=*.aqt
+8=aqtw*.exe
+9=aqu*.exe
+10=aqutesolv
+11=emf
+12=사진대지
+13=*.tab
+14=pdf
+15=require*
+16=far
+17=typora
+18=RegistryWorkShop
+19=regis
 
 [SearchIn]
-0=c:\Users\minhwasoo\Documents\SynEdit
-1=c:\Users\minhwasoo\Documents\P4D
-2=d:\11_exaData\06_util
-3=d:\11_exaData\06_util\010_ZZATURI
-4=d:\05_Send
-5=d:\09_hardRain\01_2017
-6=d:\09_hardRain
-7=C:\Program Files\totalcmd
-8=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
-9=d:\09_hardRain\08_ihanseol - 2023
-10=z:\11_exaData
-11=F:\11_exaData\06_util
-12=f:\
-13=f:\11_exaData\06_util
-14=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-15=z:\11_exaData\06_util
-16=d:\13_전주도장컴 자료
-17=d:\13_전주도장컴 자료\drive d\Temp
-18=d:\13_전주도장컴 자료\drive d
-19=d:\12_dev
+0=d:\11_exaData\06_util
+1=x:\A1_exaVideo
+2=d:\09_hardRain\08_ihanseol - 2023
+3=d:\09_hardRain
+4=c:\Users\minhwasoo\Documents\SynEdit
+5=c:\Users\minhwasoo\Documents\P4D
+6=d:\11_exaData\06_util\010_ZZATURI
+7=d:\05_Send
+8=d:\09_hardRain\01_2017
+9=C:\Program Files\totalcmd
+10=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
+11=z:\11_exaData
+12=F:\11_exaData\06_util
+13=f:\
+14=f:\11_exaData\06_util
+15=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+16=z:\11_exaData\06_util
+17=d:\13_전주도장컴 자료
+18=d:\13_전주도장컴 자료\drive d\Temp
+19=d:\13_전주도장컴 자료\drive d
