--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -184,6 +184,12 @@ cmd="c:\Program Files\totalcmd\ini\02_python\p2run_aqt.cmd single"
 button=%commander_path%\ini\icons dll\minhwasoo.icl,87
 menu= single graph generation, aqt --> pdf
 
+[em_ImageTrim]
+cmd=python "c:\Program Files\totalcmd\ini\02_python\imageTrim.py"
+button=%commander_path%\ini\icons dll\minhwasoo.icl,87
+menu= Image Trim
+
+
 ; ****************************************************************************************************
 
 
