--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -8,178 +8,182 @@ menu4=Windows Fonts
 cmd4=cd C:\Windows\Fonts
 menu5=System32
 cmd5=cd c:\Windows\System32
-menu6=SendTo
-cmd6=cd C:\Users\minhwasoo\AppData\Roaming\Microsoft\Windows\SendTo
-menu7=AdobeGCClient
-cmd7=cd c:\Program Files (x86)\Common Files\Adobe\AdobeGCClient
-menu8=SeleniumBasic
-cmd8=cd c:\Program Files\SeleniumBasic
-menu9=VBA7.1
-cmd9=cd c:\Program Files\Microsoft Office\root\vfs\ProgramFilesCommonX64\Microsoft Shared\VBA\VBA7.1
-menu10=Desktop
-cmd10=cd c:\Users\minhwasoo\Desktop
-menu11=Documents
-cmd11=cd c:\Users\minhwasoo\Documents
-menu12=Downloads
-cmd12=cd c:\Users\minhwasoo\Downloads
-menu13=Pictures
-cmd13=cd c:\Users\minhwasoo\Pictures
-menu14=minhwasoo
-cmd14=cd c:\Users\minhwasoo
-menu15=Windows
-cmd15=cd c:\Windows
-menu16=color profile
-cmd16=cd c:\Windows\System32\spool\drivers\color
-menu17=AutoCAD 2021
-cmd17=cd c:\Program Files\Autodesk\AutoCAD 2021
-menu18=autocad 21 : Support & y
-cmd18=cd C:\Users\minhwasoo\AppData\Roaming\Autodesk\AutoCAD 2021\R24.0\enu\Support
-menu19=--
-menu20=-total commander
-menu21=totalcmd
-cmd21=cd C:\Program Files\totalcmd
-menu22=plugins , totalcommander
-cmd22=cd %COMMANDER_PATH%\plugins
-menu23=util_tcer
-cmd23=cd %COMMANDER_PATH%\plugins\utils\util_tcer
-menu24=Total Commander ini
-cmd24=cd %COMMANDER_PATH%\ini
-menu25=ini --> 02_python
-cmd25=cd %COMMANDER_PATH%\ini\02_python
-menu26=ini --> config
-cmd26=cd %COMMANDER_PATH%\ini\config
-menu27=ini --> config --> Dos Batch File Example
-cmd27=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
-menu28=ini --> 01_wincmd.ini --> minhwasoo
-cmd28=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
-menu29=ini --> GHISLER
-cmd29=cd %COMMANDER_PATH%\ini\GHISLER
-menu30=ini --> icons_dll
-cmd30=cd %COMMANDER_PATH%\ini\icons dll
-menu31=RunAsTool
-cmd31=cd %COMMANDER_PATH%\RunAsTool
-menu32=98_Sordum
-cmd32=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
-menu33=99_NirSoft
-cmd33=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
-menu34=cmder config
-cmd34=cd %COMMANDER_PATH%\RunAsTool\cmder\config
-menu35=--
-menu36=-ExaData
-menu37=11_exaData
-cmd37=cd d:\11_exaData
-menu38=04_dev
-cmd38=cd d:\11_exaData\04_dev
-menu39=05_OS
-cmd39=cd d:\11_exaData\05_OS
-menu40=OS --> 05_WSH
-cmd40=cd d:\11_exaData\05_OS\05_WSH
-menu41=06_Utility
-cmd41=cd d:\11_exaData\06_util
-menu42=util --> 016_dev Tool
-cmd42=cd d:\11_exaData\06_util\016_dev tool
-menu43=util --> 010_ZZATURI
-cmd43=cd d:\11_exaData\06_util\010_ZZATURI
-menu44=util --> zzaturi --> 01_Test Program
-cmd44=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
-menu45=12_BAT_FFMPEG
-cmd45=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
-menu46=util --> 099_Game
-cmd46=cd d:\11_exaData\06_util\099_Game
-menu47=util --> 99_Game --> 10_cmder
-cmd47=cd d:\11_exaData\06_util\099_Game\10_cmder
-menu48=util --> 099_Game --> tcplugin --> 00_Program Data
-cmd48=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
-menu49=--
-menu50=-HardRain, Report
-menu51=WHPA
-cmd51=cd c:\WHPA
-menu52=04_Reference Data
-cmd52=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu53=11_JungCheon Photo by Season
-cmd53=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu54=05_ihanseol - 2020
-cmd54=cd d:\09_hardRain\05_ihanseol - 2020
-menu55=06_ihanseol - 2021
-cmd55=cd d:\09_hardRain\06_ihanseol - 2021
-menu56=07_ihanseol - 2022
-cmd56=cd d:\09_hardRain\07_ihanseol - 2022
-menu57=08_ihanseol - 2023
-cmd57=cd d:\09_hardRain\08_ihanseol - 2023
-menu58=--
-menu59=-WSL2
-menu60=WSL LocalState EXT4
-cmd60=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
-menu61=WSL minhwasoo
-cmd61=cd a:\home\minhwasoo
-menu62=--
-menu63=-Git Bash
-menu64=Git
-cmd64=cd C:\Program Files\Git
-menu65=gitbash /usr/bin
-cmd65=cd C:\Program Files\Git\usr\bin
-menu66=gitbash - mingw64 - bin
-cmd66=cd C:\Program Files\Git\mingw64\bin
-menu67=gitbvash - mingw64 - git-core
-cmd67=cd C:\Program Files\Git\mingw64\libexec\git-core
-menu68=gitbash - mergetools
-cmd68=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
-menu69=--
-menu70=-Appdata and Local
-menu71=d:/12_dev/  Action and Configuration
-cmd71=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
-menu72=Sublime Installed Packages
-cmd72=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu73=Sublime Packages
-cmd73=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu74=Sublime Packages User
-cmd74=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu75=AppData --> Local
-cmd75=cd C:\Users\minhwasoo\AppData\Local
-menu76=AddData --> Roaming
-cmd76=cd C:\Users\minhwasoo\AppData\Roaming
-menu77=Appdata --> FlowLauncher CustomIcons
-cmd77=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu78=Appdata --> Bing WPImages
-cmd78=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu79=Appdata --> WindowsTerminal Setting
-cmd79=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu80=ProgramData
-cmd80=cd C:\ProgramData
-menu81=programdata ---> 01_Inspection Tool
-cmd81=cd C:\ProgramData\36_Automation\01_Inspection Tool
-menu82=--
-menu83=-12_dev --> excel
-menu84=02_Excel
-cmd84=cd d:\12_dev\02_Excel
-menu85=02_Excel   --> 07_LandSlide
-cmd85=cd d:\12_dev\02_Excel\07_LandSlide
-menu86=02_Excel2 --> 01_Acquifer Pumping Test
-cmd86=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
-menu87=--
-menu88=02_ROMS
-cmd88=cd d:\11_exaData\10_Game\02_ROMS
-menu89=00_Emule
-cmd89=cd C:\ProgramData\00_Emule
-menu90=03_download
-cmd90=cd d:\03_download
-menu91=03_my_script
-cmd91=cd d:\12_dev\03_visual_lisp\03_my_script
-menu92=02_Book
-cmd92=cd d:\02_Book
-menu93=08_나의작업
-cmd93=cd d:\08_나의작업\
-menu94=04_mp3
-cmd94=cd d:\04_mp3
-menu95=05_Send
-cmd95=cd d:\05_Send
-menu96=06_Send2
-cmd96=cd d:\06_Send2
-menu97=C:_Temp
-cmd97=cd c:\Temp
-menu98=e: download
-cmd98=cd e:\download
-menu99=Bing
-cmd99=cd d:\10_photo\Desktop Pictures\bing
-menu100=NAS4DUAL 06_util
-cmd100=cd z:\11_exaData\06_util
+menu6=PRINTERS
+cmd6=cd C:\Windows\System32\spool\PRINTERS
+menu7=SendTo
+cmd7=cd C:\Users\minhwasoo\AppData\Roaming\Microsoft\Windows\SendTo
+menu8=AdobeGCClient
+cmd8=cd c:\Program Files (x86)\Common Files\Adobe\AdobeGCClient
+menu9=SeleniumBasic
+cmd9=cd c:\Program Files\SeleniumBasic
+menu10=VBA7.1
+cmd10=cd c:\Program Files\Microsoft Office\root\vfs\ProgramFilesCommonX64\Microsoft Shared\VBA\VBA7.1
+menu11=Desktop
+cmd11=cd c:\Users\minhwasoo\Desktop
+menu12=Documents
+cmd12=cd c:\Users\minhwasoo\Documents
+menu13=Downloads
+cmd13=cd c:\Users\minhwasoo\Downloads
+menu14=Pictures
+cmd14=cd c:\Users\minhwasoo\Pictures
+menu15=minhwasoo
+cmd15=cd c:\Users\minhwasoo
+menu16=Windows
+cmd16=cd c:\Windows
+menu17=color profile
+cmd17=cd c:\Windows\System32\spool\drivers\color
+menu18=AutoCAD 2021
+cmd18=cd c:\Program Files\Autodesk\AutoCAD 2021
+menu19=autocad 21 : Support & y
+cmd19=cd C:\Users\minhwasoo\AppData\Roaming\Autodesk\AutoCAD 2021\R24.0\enu\Support
+menu20=--
+menu21=-total commander
+menu22=totalcmd
+cmd22=cd C:\Program Files\totalcmd
+menu23=plugins , totalcommander
+cmd23=cd %COMMANDER_PATH%\plugins
+menu24=util_tcer
+cmd24=cd %COMMANDER_PATH%\plugins\utils\util_tcer
+menu25=Total Commander ini
+cmd25=cd %COMMANDER_PATH%\ini
+menu26=ini --> 02_python
+cmd26=cd %COMMANDER_PATH%\ini\02_python
+menu27=ini --> config
+cmd27=cd %COMMANDER_PATH%\ini\config
+menu28=ini --> config --> Dos Batch File Example
+cmd28=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
+menu29=ini --> 01_wincmd.ini --> minhwasoo
+cmd29=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
+menu30=ini --> GHISLER
+cmd30=cd %COMMANDER_PATH%\ini\GHISLER
+menu31=ini --> icons_dll
+cmd31=cd %COMMANDER_PATH%\ini\icons dll
+menu32=RunAsTool
+cmd32=cd %COMMANDER_PATH%\RunAsTool
+menu33=98_Sordum
+cmd33=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
+menu34=99_NirSoft
+cmd34=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
+menu35=cmder config
+cmd35=cd %COMMANDER_PATH%\RunAsTool\cmder\config
+menu36=--
+menu37=-ExaData
+menu38=11_exaData
+cmd38=cd d:\11_exaData
+menu39=04_dev
+cmd39=cd d:\11_exaData\04_dev
+menu40=05_OS
+cmd40=cd d:\11_exaData\05_OS
+menu41=OS --> 05_WSH
+cmd41=cd d:\11_exaData\05_OS\05_WSH
+menu42=06_Utility
+cmd42=cd d:\11_exaData\06_util
+menu43=util --> 016_dev Tool
+cmd43=cd d:\11_exaData\06_util\016_dev tool
+menu44=util --> 010_ZZATURI
+cmd44=cd d:\11_exaData\06_util\010_ZZATURI
+menu45=util --> zzaturi --> 01_Test Program
+cmd45=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
+menu46=12_BAT_FFMPEG
+cmd46=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
+menu47=util --> 099_Game
+cmd47=cd d:\11_exaData\06_util\099_Game
+menu48=util --> 99_Game --> 10_cmder
+cmd48=cd d:\11_exaData\06_util\099_Game\10_cmder
+menu49=util --> 099_Game --> tcplugin --> 00_Program Data
+cmd49=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
+menu50=--
+menu51=-HardRain, Report
+menu52=WHPA
+cmd52=cd c:\WHPA
+menu53=04_Reference Data
+cmd53=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu54=11_JungCheon Photo by Season
+cmd54=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu55=05_ihanseol - 2020
+cmd55=cd d:\09_hardRain\05_ihanseol - 2020
+menu56=06_ihanseol - 2021
+cmd56=cd d:\09_hardRain\06_ihanseol - 2021
+menu57=07_ihanseol - 2022
+cmd57=cd d:\09_hardRain\07_ihanseol - 2022
+menu58=08_ihanseol - 2023
+cmd58=cd d:\09_hardRain\08_ihanseol - 2023
+menu59=--
+menu60=-WSL2
+menu61=WSL LocalState EXT4
+cmd61=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu62=WSL minhwasoo
+cmd62=cd a:\home\minhwasoo
+menu63=--
+menu64=-Git Bash
+menu65=Git
+cmd65=cd C:\Program Files\Git
+menu66=gitbash /usr/bin
+cmd66=cd C:\Program Files\Git\usr\bin
+menu67=gitbash - mingw64 - bin
+cmd67=cd C:\Program Files\Git\mingw64\bin
+menu68=gitbvash - mingw64 - git-core
+cmd68=cd C:\Program Files\Git\mingw64\libexec\git-core
+menu69=gitbash - mergetools
+cmd69=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
+menu70=--
+menu71=-Appdata and Local
+menu72=Hnc --> Bin
+cmd72=cd c:\Program Files (x86)\HNC\Office 2022\HOffice120\Bin
+menu73=d:/12_dev/  Action and Configuration
+cmd73=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu74=Sublime Installed Packages
+cmd74=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu75=Sublime Packages
+cmd75=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu76=Sublime Packages User
+cmd76=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu77=AppData --> Local
+cmd77=cd C:\Users\minhwasoo\AppData\Local
+menu78=AddData --> Roaming
+cmd78=cd C:\Users\minhwasoo\AppData\Roaming
+menu79=Appdata --> FlowLauncher CustomIcons
+cmd79=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu80=Appdata --> Bing WPImages
+cmd80=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu81=Appdata --> WindowsTerminal Setting
+cmd81=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu82=ProgramData
+cmd82=cd C:\ProgramData
+menu83=programdata ---> 01_Inspection Tool
+cmd83=cd C:\ProgramData\36_Automation\01_Inspection Tool
+menu84=--
+menu85=-12_dev --> excel
+menu86=02_Excel
+cmd86=cd d:\12_dev\02_Excel
+menu87=02_Excel   --> 07_LandSlide
+cmd87=cd d:\12_dev\02_Excel\07_LandSlide
+menu88=02_Excel2 --> 01_Acquifer Pumping Test
+cmd88=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
+menu89=--
+menu90=02_ROMS
+cmd90=cd d:\11_exaData\10_Game\02_ROMS
+menu91=00_Emule
+cmd91=cd C:\ProgramData\00_Emule
+menu92=03_download
+cmd92=cd d:\03_download
+menu93=03_my_script
+cmd93=cd d:\12_dev\03_visual_lisp\03_my_script
+menu94=02_Book
+cmd94=cd d:\02_Book
+menu95=08_나의작업
+cmd95=cd d:\08_나의작업\
+menu96=04_mp3
+cmd96=cd d:\04_mp3
+menu97=05_Send
+cmd97=cd d:\05_Send
+menu98=06_Send2
+cmd98=cd d:\06_Send2
+menu99=C:_Temp
+cmd99=cd c:\Temp
+menu100=e: download
+cmd100=cd e:\download
+menu101=Bing
+cmd101=cd d:\10_photo\Desktop Pictures\bing
+menu102=NAS4DUAL 06_util
+cmd102=cd z:\11_exaData\06_util
