--- a/GHISLER/CONFIG/1920x1080.ini
+++ b/GHISLER/CONFIG/1920x1080.ini
@@ -1,12 +1,12 @@
 [1920x1080 (8x16)]
 
 FontSize=9
-FontName=ë§‘ì€ ê³ ë”•
+FontName=¸¼Àº °íµñ
 FontSizeWindow=9
-FontNameWindow=ë§‘ì€ ê³ ë”•
+FontNameWindow=¸¼Àº °íµñ
 FontWeight=700
 FontWeightWindow=700
-FontNameDialog=ë§‘ì€ ê³ ë”•
+FontNameDialog=¸¼Àº °íµñ
 FontWeightDialog=700
 Tabstops=457,461,525,397,1106,90
 maximized=1
