--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -93,73 +93,73 @@ cmd48=cd d:\11_exaData\06_util\099_Game\10_cmder
 menu49=util --> 099_Game --> tcplugin --> 00_Program Data
 cmd49=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
 menu50=--
-menu51=-HardRain, Report
-menu52=WHPA
-cmd52=cd c:\WHPA
-menu53=04_Reference Data
-cmd53=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu54=11_JungCheon Photo by Season
-cmd54=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu55=05_ihanseol - 2020
-cmd55=cd d:\09_hardRain\05_ihanseol - 2020
-menu56=06_ihanseol - 2021
-cmd56=cd d:\09_hardRain\06_ihanseol - 2021
-menu57=07_ihanseol - 2022
-cmd57=cd d:\09_hardRain\07_ihanseol - 2022
-menu58=08_ihanseol - 2023
-cmd58=cd d:\09_hardRain\08_ihanseol - 2023
-menu59=--
-menu60=-WSL2
-menu61=WSL LocalState EXT4
-cmd61=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
-menu62=WSL minhwasoo
-cmd62=cd a:\home\minhwasoo
-menu63=--
-menu64=-Git Bash
-menu65=Git
-cmd65=cd C:\Program Files\Git
-menu66=gitbash /usr/bin
-cmd66=cd C:\Program Files\Git\usr\bin
-menu67=gitbash - mingw64 - bin
-cmd67=cd C:\Program Files\Git\mingw64\bin
-menu68=gitbvash - mingw64 - git-core
-cmd68=cd C:\Program Files\Git\mingw64\libexec\git-core
-menu69=gitbash - mergetools
-cmd69=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
-menu70=--
-menu71=-Appdata and Local
-menu72=Hnc --> Bin
-cmd72=cd c:\Program Files (x86)\HNC\Office 2022\HOffice120\Bin
-menu73=d:/12_dev/  Action and Configuration
-cmd73=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
-menu74=Sublime Installed Packages
-cmd74=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu75=Sublime Packages
-cmd75=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu76=Sublime Packages User
-cmd76=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu77=AppData --> Local
-cmd77=cd C:\Users\minhwasoo\AppData\Local
-menu78=AddData --> Roaming
-cmd78=cd C:\Users\minhwasoo\AppData\Roaming
-menu79=Appdata --> FlowLauncher CustomIcons
-cmd79=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu80=Appdata --> Bing WPImages
-cmd80=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu81=Appdata --> WindowsTerminal Setting
-cmd81=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu82=ProgramData
-cmd82=cd C:\ProgramData
-menu83=programdata ---> 01_Inspection Tool
-cmd83=cd C:\ProgramData\36_Automation\01_Inspection Tool
-menu84=--
-menu85=-12_dev --> excel
-menu86=02_Excel
-cmd86=cd d:\12_dev\02_Excel
-menu87=02_Excel   --> 07_LandSlide
-cmd87=cd d:\12_dev\02_Excel\07_LandSlide
-menu88=02_Excel2 --> 01_Acquifer Pumping Test
-cmd88=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
+menu51=-WSL2
+menu52=WSL LocalState EXT4
+cmd52=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu53=WSL minhwasoo
+cmd53=cd a:\home\minhwasoo
+menu54=--
+menu55=-Git Bash
+menu56=Git
+cmd56=cd C:\Program Files\Git
+menu57=gitbash /usr/bin
+cmd57=cd C:\Program Files\Git\usr\bin
+menu58=gitbash - mingw64 - bin
+cmd58=cd C:\Program Files\Git\mingw64\bin
+menu59=gitbvash - mingw64 - git-core
+cmd59=cd C:\Program Files\Git\mingw64\libexec\git-core
+menu60=gitbash - mergetools
+cmd60=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
+menu61=--
+menu62=-Appdata and Local
+menu63=Hnc --> Bin
+cmd63=cd c:\Program Files (x86)\HNC\Office 2022\HOffice120\Bin
+menu64=d:/12_dev/  Action and Configuration
+cmd64=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu65=Sublime Installed Packages
+cmd65=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu66=Sublime Packages
+cmd66=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu67=Sublime Packages User
+cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu68=AppData --> Local
+cmd68=cd C:\Users\minhwasoo\AppData\Local
+menu69=AddData --> Roaming
+cmd69=cd C:\Users\minhwasoo\AppData\Roaming
+menu70=Appdata --> FlowLauncher CustomIcons
+cmd70=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu71=Appdata --> Bing WPImages
+cmd71=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu72=Appdata --> WindowsTerminal Setting
+cmd72=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu73=ProgramData
+cmd73=cd C:\ProgramData
+menu74=programdata ---> 01_Inspection Tool
+cmd74=cd C:\ProgramData\36_Automation\01_Inspection Tool
+menu75=--
+menu76=-12_dev --> excel
+menu77=02_Excel
+cmd77=cd d:\12_dev\02_Excel
+menu78=02_Excel   --> 07_LandSlide
+cmd78=cd d:\12_dev\02_Excel\07_LandSlide
+menu79=02_Excel2 --> 01_Acquifer Pumping Test
+cmd79=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
+menu80=--
+menu81=-HardRain, Report
+menu82=WHPA
+cmd82=cd c:\WHPA
+menu83=04_Reference Data
+cmd83=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu84=11_JungCheon Photo by Season
+cmd84=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu85=05_ihanseol - 2020
+cmd85=cd d:\09_hardRain\05_ihanseol - 2020
+menu86=07_ihanseol - 2022
+cmd86=cd d:\09_hardRain\07_ihanseol - 2022
+menu87=06_ihanseol - 2021
+cmd87=cd d:\09_hardRain\06_ihanseol - 2021
+menu88=08_ihanseol - 2023
+cmd88=cd d:\09_hardRain\08_ihanseol - 2023
 menu89=--
 menu90=02_ROMS
 cmd90=cd d:\11_exaData\10_Game\02_ROMS
@@ -187,3 +187,5 @@ menu101=Bing
 cmd101=cd d:\10_photo\Desktop Pictures\bing
 menu102=NAS4DUAL 06_util
 cmd102=cd z:\11_exaData\06_util
+menu103=Nas --> 08_ihanseol - 2023
+cmd103=cd z:\09_hardRain\08_ihanseol - 2023
