--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -51,26 +51,26 @@
 
 
 [SearchName]
-0=ezpdf
-1=bak
-2=1143
-3=inc
-4=bpl
-5=tera
-6=terra
-7=*.aqt
-8=aqtw*.exe
-9=aqu*.exe
-10=aqutesolv
-11=emf
-12=사진대지
-13=*.tab
-14=pdf
-15=require*
-16=far
-17=typora
-18=RegistryWorkShop
-19=regis
+0=distant
+1=qbit
+2=ezpdf
+3=bak
+4=1143
+5=inc
+6=bpl
+7=tera
+8=terra
+9=*.aqt
+10=aqtw*.exe
+11=aqu*.exe
+12=aqutesolv
+13=emf
+14=사진대지
+15=*.tab
+16=pdf
+17=require*
+18=far
+19=typora
 
 [SearchIn]
 0=d:\11_exaData\06_util
