--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,6 +1,6 @@
 
 [left]
-path=c:\Users\minhwasoo\Downloads\
+path=d:\05_Send\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -15,8 +15,8 @@ sortorder=0
 
 
 [right]
-path=d:\11_exaData\06_util\010_ZZATURI\00_Internet\
-ViewMode=-1
+path=d:\09_hardRain\08_ihanseol - 2023\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -66,9 +66,9 @@ XPstyle=1
 2_options=1|0|0|0|0|1|0|
 3_path=d:\11_exaData\06_util\
 3_options=1|0|0|0|0|1|0|
-4_path=d:\05_Send\
+4_path=c:\Users\minhwasoo\Downloads\
 4_options=1|0|0|0|0|1|0|
-activetab=4
+activetab=5
 activelocked=1
 [righttabs]
 0_path=d:\11_exaData\06_util\
@@ -77,8 +77,5 @@ activelocked=1
 1_options=1|0|0|0|0|1|0|
 2_path=c:\Users\minhwasoo\Downloads\
 2_options=1|0|0|0|0|1|0|
-3_path=d:\09_hardRain\08_ihanseol - 2023\
-3_options=1|0|0|0|0|1|0|
-4_path=d:\
-4_options=1|0|0|0|0|0|0|
-activetab=5
+activetab=3
+activelocked=1
