--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -161,31 +161,29 @@ cmd87=cd d:\09_hardRain\06_ihanseol - 2021
 menu88=08_ihanseol - 2023
 cmd88=cd d:\09_hardRain\08_ihanseol - 2023
 menu89=--
-menu90=02_ROMS
-cmd90=cd d:\11_exaData\10_Game\02_ROMS
-menu91=00_Emule
-cmd91=cd C:\ProgramData\00_Emule
-menu92=03_download
-cmd92=cd d:\03_download
-menu93=03_my_script
-cmd93=cd d:\12_dev\03_visual_lisp\03_my_script
-menu94=02_Book
-cmd94=cd d:\02_Book
-menu95=08_나의작업
-cmd95=cd d:\08_나의작업\
-menu96=04_mp3
-cmd96=cd d:\04_mp3
-menu97=05_Send
-cmd97=cd d:\05_Send
-menu98=06_Send2
-cmd98=cd d:\06_Send2
-menu99=C:_Temp
-cmd99=cd c:\Temp
-menu100=e: download
-cmd100=cd e:\download
-menu101=Bing
-cmd101=cd d:\10_photo\Desktop Pictures\bing
-menu102=NAS4DUAL 06_util
-cmd102=cd z:\11_exaData\06_util
-menu103=Nas --> 08_ihanseol - 2023
-cmd103=cd z:\09_hardRain\08_ihanseol - 2023
+menu90=02_Book
+cmd90=cd d:\02_Book
+menu91=03_download
+cmd91=cd d:\03_download
+menu92=03_my_script
+cmd92=cd d:\12_dev\03_visual_lisp\03_my_script
+menu93=08_나의작업
+cmd93=cd d:\08_나의작업\
+menu94=04_mp3
+cmd94=cd d:\04_mp3
+menu95=05_Send
+cmd95=cd d:\05_Send
+menu96=06_Send2
+cmd96=cd d:\06_Send2
+menu97=C:_Temp
+cmd97=cd c:\Temp
+menu98=e: download
+cmd98=cd e:\download
+menu99=Bing
+cmd99=cd d:\10_photo\Desktop Pictures\bing
+menu100=13_ExaVideo
+cmd100=cd d:\13_ExaVideo
+menu101=NAS4DUAL 06_util
+cmd101=cd z:\11_exaData\06_util
+menu102=Nas --> 08_ihanseol - 2023
+cmd102=cd z:\09_hardRain\08_ihanseol - 2023
