--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -64,18 +64,18 @@ XPstyle=1
 1_options=1|0|0|0|0|1|0|
 2_path=c:\Users\minhwasoo\Documents\
 2_options=1|0|0|0|0|1|0|
-3_path=d:\11_exaData\06_util\
+3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-4_path=c:\Users\minhwasoo\Downloads\
+4_path=d:\11_exaData\06_util\
 4_options=1|0|0|0|0|1|0|
 activetab=5
 activelocked=1
 [righttabs]
-0_path=d:\11_exaData\06_util\
+0_path=d:\12_dev\
 0_options=1|0|0|0|0|1|0|
-1_path=d:\12_dev\
+1_path=d:\11_exaData\06_util\
 1_options=1|0|0|0|0|1|0|
-2_path=c:\Users\minhwasoo\Downloads\
+2_path=d:\05_Send\
 2_options=1|0|0|0|0|1|0|
 activetab=3
 activelocked=1
