--- a/GHISLER/WINCMD.INI
+++ b/GHISLER/WINCMD.INI
@@ -221,3 +221,46 @@ DeleteEmptyFolders_Flags=25|63|6
 [CompareCustomField]
 0exts=>Find Empty Directory
 0fields=emp
+[3072x1728 (8x16)]
+maximized=1
+x=3685
+y=384
+dx=1954
+dy=1212
+Divider=500
+DividerQuickView=500
+DividerComments=500
+Tabstops=640,644,707,580,1472,90
+SyncX=3742
+SyncY=467
+SyncDX=1290
+SyncDY=923
+SyncMax=0
+SyncTabs=116,192,311,340,456,532
+MenuChangeX=3998
+MenuChangeY=561
+MenuChangeDX=640
+MenuChangeDY=498
+MenuChangeMax=0
+monitor(0,0,3072,1728;96)=1122,477,1954,1212
+SearchX=3841
+SearchY=457
+SearchDX=1103
+SearchDY=285
+SearchMax=0
+[3840x2160 (8x16)]
+SyncX=4438
+SyncY=390
+SyncDX=1119
+SyncDY=666
+SyncMax=0
+SyncTabs=116,192,311,340,456,532
+maximized=1
+x=4570
+y=300
+dx=1100
+dy=800
+Divider=500
+DividerQuickView=500
+DividerComments=500
+Tabstops=640,644,707,580,1472,90
