--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -51,35 +51,35 @@
 
 
 [SearchName]
-0=distant
-1=qbit
-2=ezpdf
-3=bak
-4=1143
-5=inc
-6=bpl
-7=tera
-8=terra
-9=*.aqt
-10=aqtw*.exe
-11=aqu*.exe
-12=aqutesolv
-13=emf
-14=사진대지
-15=*.tab
-16=pdf
-17=require*
-18=far
-19=typora
+0=process
+1=distant
+2=qbit
+3=ezpdf
+4=bak
+5=1143
+6=inc
+7=bpl
+8=tera
+9=terra
+10=*.aqt
+11=aqtw*.exe
+12=aqu*.exe
+13=aqutesolv
+14=emf
+15=사진대지
+16=*.tab
+17=pdf
+18=require*
+19=far
 
 [SearchIn]
-0=d:\11_exaData\06_util
-1=x:\A1_exaVideo
-2=d:\09_hardRain\08_ihanseol - 2023
-3=d:\09_hardRain
-4=c:\Users\minhwasoo\Documents\SynEdit
-5=c:\Users\minhwasoo\Documents\P4D
-6=d:\11_exaData\06_util\010_ZZATURI
+0=d:\11_exaData\06_util\010_ZZATURI
+1=d:\11_exaData\06_util
+2=x:\A1_exaVideo
+3=d:\09_hardRain\08_ihanseol - 2023
+4=d:\09_hardRain
+5=c:\Users\minhwasoo\Documents\SynEdit
+6=c:\Users\minhwasoo\Documents\P4D
 7=d:\05_Send
 8=d:\09_hardRain\01_2017
 9=C:\Program Files\totalcmd
