--- a/GHISLER/WINCMD.INI
+++ b/GHISLER/WINCMD.INI
@@ -231,10 +231,10 @@ Divider=500
 DividerQuickView=500
 DividerComments=500
 Tabstops=640,644,707,580,1472,90
-SyncX=3742
-SyncY=467
+SyncX=3584
+SyncY=403
 SyncDX=1290
-SyncDY=923
+SyncDY=911
 SyncMax=0
 SyncTabs=116,192,311,340,456,532
 MenuChangeX=3998
@@ -258,6 +258,16 @@ SyncTabs=116,192,311,340,456,532
 maximized=1
 x=4570
 y=300
+dx=1100
+dy=800
+Divider=500
+DividerQuickView=500
+DividerComments=500
+Tabstops=640,644,707,580,1472,90
+[3200x1800 (8x16)]
+maximized=1
+x=3930
+y=474
 dx=1100
 dy=800
 Divider=500
