--- a/GHISLER/CONFIG/Configuration.ini
+++ b/GHISLER/CONFIG/Configuration.ini
@@ -2,7 +2,7 @@
 
 UseNewDefFont=1
 SetEncoding=дц.do.not.remove
-firstmnu=1811
+firstmnu=2320
 FirstTimeIconLib=0
 FirstTime=0
 test=164
@@ -50,7 +50,7 @@ Tips=3
 FileTipWindows=0
 Win32TipWindows=0
 SortUpper=2
-QuickSearchAutoFilter=1
+QuickSearchAutoFilter=0
 onlyonce=0
 TrayIcon=0
 UseRightButton=1
@@ -114,3 +114,4 @@ IgnoreListFile=C:\Users\minhwasoo\AppData\Roaming\GHISLER\tcignore.txt
 ShowCopyOptions=1
 ThumbsInDlg=0
 TabDir=C:\Users\minhwasoo\Downloads\
+DirMenuLast=86
