--- a/GHISLER/CONFIG/Rename.ini
+++ b/GHISLER/CONFIG/Rename.ini
@@ -22,10 +22,10 @@ Number Non Zero_params=0|1|1|1
 
 
 [RenameTemplates]
-0=P[C]_[N]
-1=0[C]_[N]
-2=00_[N]
-3=[N]
+0=[N]
+1=P[C]_[N]
+2=0[C]_[N]
+3=00_[N]
 4=0[N]
 5=_[N]
 6=수질검사_[N]
@@ -45,26 +45,26 @@ Number Non Zero_params=0|1|1|1
 
 
 [RenameSearchFind]
-0=w2
-1=w1
-2=오포리 409-1
-3=^.
-4=\((.*?)\)
-5=\[(.*?)\]
-6=\[(\w+)\]
-7=^....
-8=^...
-9=_01
-10=p
-11=slidelegend.com_
-12="[Fix-Fontsizecolor] "
-13="[VCB-Studio] "
-14=(\d+)
-15="[Shiniori-Raws] "
-16=^.{7}
-17=mun
-18=bat
-19=" (2)"
+0=[Ma10p_1080p]
+1=[x265_flac_aac]
+2=[x265_flac]
+3=w2
+4=w1
+5=오포리 409-1
+6=^.
+7=\((.*?)\)
+8=\[(.*?)\]
+9=\[(\w+)\]
+10=^....
+11=^...
+12=_01
+13=p
+14=slidelegend.com_
+15="[Fix-Fontsizecolor] "
+16="[VCB-Studio] "
+17=(\d+)
+18="[Shiniori-Raws] "
+19=^.{7}
 
 
 [RenameSearchReplace]
