--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -51,45 +51,45 @@
 
 
 [SearchName]
-0=process
-1=distant
-2=qbit
-3=ezpdf
-4=bak
-5=1143
-6=inc
-7=bpl
-8=tera
-9=terra
-10=*.aqt
-11=aqtw*.exe
-12=aqu*.exe
-13=aqutesolv
-14=emf
-15=사진대지
-16=*.tab
-17=pdf
-18=require*
-19=far
+0=HWPWMko-KR120
+1=process
+2=distant
+3=qbit
+4=ezpdf
+5=bak
+6=1143
+7=inc
+8=bpl
+9=tera
+10=terra
+11=*.aqt
+12=aqtw*.exe
+13=aqu*.exe
+14=aqutesolv
+15=emf
+16=사진대지
+17=*.tab
+18=pdf
+19=require*
 
 [SearchIn]
-0=d:\11_exaData\06_util\010_ZZATURI
-1=d:\11_exaData\06_util
-2=x:\A1_exaVideo
-3=d:\09_hardRain\08_ihanseol - 2023
-4=d:\09_hardRain
-5=c:\Users\minhwasoo\Documents\SynEdit
-6=c:\Users\minhwasoo\Documents\P4D
-7=d:\05_Send
-8=d:\09_hardRain\01_2017
-9=C:\Program Files\totalcmd
-10=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
-11=z:\11_exaData
-12=F:\11_exaData\06_util
-13=f:\
-14=f:\11_exaData\06_util
-15=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-16=z:\11_exaData\06_util
-17=d:\13_전주도장컴 자료
-18=d:\13_전주도장컴 자료\drive d\Temp
-19=d:\13_전주도장컴 자료\drive d
+0=c:\Users\minhwasoo\AppData\Roaming\Hnc\User
+1=d:\11_exaData\06_util\010_ZZATURI
+2=d:\11_exaData\06_util
+3=x:\A1_exaVideo
+4=d:\09_hardRain\08_ihanseol - 2023
+5=d:\09_hardRain
+6=c:\Users\minhwasoo\Documents\SynEdit
+7=c:\Users\minhwasoo\Documents\P4D
+8=d:\05_Send
+9=d:\09_hardRain\01_2017
+10=C:\Program Files\totalcmd
+11=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
+12=z:\11_exaData
+13=F:\11_exaData\06_util
+14=f:\
+15=f:\11_exaData\06_util
+16=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+17=z:\11_exaData\06_util
+18=d:\13_전주도장컴 자료
+19=d:\13_전주도장컴 자료\drive d\Temp
