--- a/GHISLER/WINCMD.INI
+++ b/GHISLER/WINCMD.INI
@@ -3,6 +3,7 @@ UseIniInProgramDir=7
 RedirectSection=CONFIG/Configuration.ini
 Mainmenu=wcmd_eng.mnu
 Editor=%COMMANDER_PATH%\plugins\utils\util_OpenFileTC_1.8c\OpenFileTC.exe
+InstallDir=C:\Program Files\totalcmd
 
 [ButtonbarCache]
 RedirectSection=CONFIG/ButtonbarCache.ini
@@ -231,8 +232,8 @@ Divider=500
 DividerQuickView=500
 DividerComments=500
 Tabstops=640,644,707,580,1472,90
-SyncX=3584
-SyncY=403
+SyncX=3639
+SyncY=362
 SyncDX=1290
 SyncDY=911
 SyncMax=0
@@ -248,6 +249,12 @@ SearchY=457
 SearchDX=1103
 SearchDY=285
 SearchMax=0
+RenameX=3707
+RenameY=319
+RenameDX=1092
+RenameDY=514
+RenameMax=0
+RenameTabs=145,183,435,510,662
 [3840x2160 (8x16)]
 SyncX=4438
 SyncY=390
